--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="text-about-me">
                 Tenho 28 anos. Moro no interior de SP.<br> 
-                Tenho muita afinidade por técnologia. 
+                Tenho muita afinidade por tecnologia. 
                 Estudo com afinco para me tornar uma desenvolvedora frontend. <br>
                 Estou atualmente aprofundando meus conhecimentos em HTML, CSS, 
                 JAVASCRIPT e meu principal objetivo é conquistar meu espaço no
